--- a/app/globals.css
+++ b/app/globals.css
@@ -1,35 +1,50 @@
 body {
   font-family: Arial, sans-serif;
 }
+.w-100 {
+  width: 100% !important;
+}
+.h-100 {
+  height: 100% !important;
+}
+.mb-0 {
+  margin-bottom: 0 !important;
+}
 .mb-1 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem !important;
 }
 .mb-2 {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
+}
+.mt-0 {
+  margin-top: 0 !important;
 }
 .mt-1 {
-  margin-top: 0.5rem;
+  margin-top: 0.5rem !important;
 }
 .mt-2 {
-  margin-top: 1rem;
+  margin-top: 1rem !important;
 }
 .d-flex {
-  display: flex;
+  display: flex !important;
 }
 .justify-content-between {
-  justify-content: space-between;
+  justify-content: space-between !important;
+}
+.justify-content-center {
+  justify-content: center !important;
 }
 .align-items-center {
-  align-items: center;
+  align-items: center !important;
 }
 .text-center {
-  text-align: center;
+  text-align: center !important;
 }
 .text-right {
-  text-align: right;
+  text-align: right !important;
 }
 .text-left {
-  text-align: left;
+  text-align: left !important;
 }
 .text-bold {
   font-weight: bold;
@@ -70,6 +85,7 @@ body {
   width: 58mm;
   font-size: 12px;
   padding: 4px;
+  margin: 0 auto;
 }
 
 .invoice table {
