--- a/app/globals.css
+++ b/app/globals.css
@@ -76,10 +76,40 @@ body {
 .text-break {
   word-break: break-all;
 }
-.text-ellipsis { 
+.text-ellipsis {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.btn-default {
+  background-color: rgb(131, 131, 131);
+  color: white;
+  border: none;
+  padding: 4px 8px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.btn-default:disabled {
+  background-color: rgb(209, 209, 209);
+  cursor: not-allowed;
+}
+.btn-default.primary {
+  background-color: #4caf50;
+}
+.btn-default.primary:hover {
+  background-color: #268d2c;
+}
+.btn-default.primary:disabled {
+  background-color: #bfd0c0;
+}
+.btn-default.error {
+  background-color: #ff0000;
+}
+.btn-default.error:hover {
+  background-color: #ce0404;
+}
+.btn-default.error:disabled {
+  background-color: #e5b1b1;
 }
 .invoice {
   width: 68mm;
