--- a/app/globals.css
+++ b/app/globals.css
@@ -100,7 +100,7 @@ html {
 }
 .invoice .table-invoice th,
 .invoice .table-invoice td {
-  font-size: 12px;
+  font-size: 10px !important;
 }
 
 .qr-container {
