--- a/app/globals.css
+++ b/app/globals.css
@@ -1,89 +1,125 @@
 body {
   font-family: Arial, sans-serif;
 }
+
 html {
   -webkit-text-size-adjust: 100%;
 }
+
 .w-100 {
   width: 100% !important;
 }
+
 .h-100 {
   height: 100% !important;
 }
+
 .mb-0 {
   margin-bottom: 0 !important;
 }
+
 .mb-1 {
   margin-bottom: 0.5rem !important;
 }
+
 .mb-2 {
   margin-bottom: 1rem !important;
 }
+
 .mt-0 {
   margin-top: 0 !important;
 }
+
 .mt-1 {
   margin-top: 0.5rem !important;
 }
+
 .mt-2 {
   margin-top: 1rem !important;
 }
+
 .d-flex {
   display: flex !important;
 }
+
+.flex-1 {
+  flex: 1 !important
+}
+
+.flex-column {
+  flex-direction: column !important;
+}
+
 .justify-content-between {
   justify-content: space-between !important;
 }
+
 .justify-content-center {
   justify-content: center !important;
 }
+
 .align-items-center {
   align-items: center !important;
 }
+
 .text-center {
   text-align: center !important;
 }
+
 .text-right {
   text-align: right !important;
 }
+
 .text-left {
   text-align: left !important;
 }
+
 .text-bold {
   font-weight: bold;
 }
+
 .text-normal {
   font-weight: normal;
 }
+
 .text-italic {
   font-style: italic;
 }
+
 .text-underline {
   text-decoration: underline;
 }
+
 .text-line-through {
   text-decoration: line-through;
 }
+
 .text-uppercase {
   text-transform: uppercase;
 }
+
 .text-lowercase {
   text-transform: lowercase;
 }
+
 .text-capitalize {
   text-transform: capitalize;
 }
+
 .text-nowrap {
   white-space: nowrap;
 }
+
 .text-break {
   word-break: break-all;
 }
+
 .text-ellipsis {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .invoice {
   max-width: 80mm;
   font-size: 12px;
@@ -97,14 +133,16 @@ html {
   letter-spacing: normal;
   word-spacing: normal;
   white-space: pre;
-  
+
 }
+
 .invoice p {
   margin: 0 0 4px;
   letter-spacing: normal;
   word-spacing: normal;
   white-space: pre;
 }
+
 .invoice .table-invoice th,
 .invoice .table-invoice td {
   font-size: 10px !important;
@@ -143,6 +181,7 @@ button {
 .gap-1 {
   gap: 0.5rem !important;
 }
+
 .gap-2 {
   gap: 1rem !important;
 }
